<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_donate_title" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_recent_history"
            android:title="@string/nav_history_title" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings_title" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/nav_about_title" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share_title" />
        </menu>
    </item>

</menu>
