<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/facebook_login"
        style="@style/FacebookLoginButton"
        android:text="@string/facebook_login" />

    <TextView
        android:id="@+id/google_login"
        style="@style/GoogleLoginButton"
        android:text="@string/google_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:padding="@dimen/text_padding"/>

</LinearLayout>